--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,24 +1,30 @@
-name: nodejs
+name: CI Build and Push Docker Image
 
-on: [push, pull_request]
-
+on:
+  push:
+    branches:
+      - main
+  
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: ['12.x', '14.x']
-
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-          check-latest: true
-      - name: npm install, build, and test
-        run: |
-          npm install
-        env:
-          CI: true
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+      
+    - name: Set up Docker buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build Docker image
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/rajancd:latest .
+
+    - name: Push Docker image
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/rajancd:latest
+    
