--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,5 +27,5 @@ jobs:
       run: docker build -t ${{ secrets.DOCKER_USERNAME }}/rajan715/rajancd:latest .
 
     - name: Push Docker image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/rajancd:latest
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/rajan715/rajancd:latest
     
