--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,8 +24,8 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/rajan715/rajancd:latest .
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/rajan715/rajancd:default .
 
     - name: Push Docker image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/rajan715/rajancd:latest
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/rajan715/rajancd:default .
     
