--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,28 +4,27 @@ on:
   push:
     branches:
       - main
-  
+
 jobs:
   build:
-    runs-on: ubuntu-latest .
-
+    runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
-      
-    - name: Set up Docker buildx
-      uses: docker/setup-buildx-action@v1
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up Docker buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/rajan715/rajancd:default .
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Push Docker image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/rajan715/rajancd:default .
-    
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/rajan715/rajancd:default .
+        working-directory: ./path/to/your/dockerfile
+
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/rajan715/rajancd:default
