--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,27 +4,27 @@ on:
   push:
     branches:
       - main
-
+  
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+      
+    - name: Set up Docker buildx
+      uses: docker/setup-buildx-action@v1
 
-      - name: Set up Docker buildx
-        uses: docker/setup-buildx-action@v1
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Build Docker image
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/rajancd:latest .
 
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/rajancd:default .
-        working-directory: Dockerfile
-
-      - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/rajancd:default .
+    - name: Push Docker image
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/rajancd:latest
+    
